Bug 1832883 - Raise priority of background mainthreads to Utility level r=xpcom-reviewers,nika

Utility level is often used for nonperceivable work, but operates at a higher level than a background priority. This puts our background main thread priorities on the same level as the OS uses for general offthread work, so the perceivable delay to warm up the main thread on high cpu usage is limited to a few seconds (previously indefinite).

Differential Revision: https://phabricator.services.mozilla.com/D178096